add basic frontend